marketing-solutions/v2020.07/docs/managing-sellers.mdx
---
title: "Managing Sellers"
---
import { EndpointBadge } from "/snippets/EndpointBadge.jsx";

1. Guides for Marketing Solutions API
2. [Criteo Offsite Ads](/marketing-solutions/v2020.07/docs/criteo-offsite-ads)

The seller represents the legal person selling products on your platform. The COA API enables you to manage the advertisement of your Sellers.

## Adding Sellers

Sellers are not added with the API. Instead, they are automatically added from the Catalog you provided us. In your catalog, you should provide the "sellerName" field on the Sellers' products. Products that don't have these fields provided will not be advertised.

<Warning>
  ### SellerName is case-sensitive. If your seller has different case, it will be considered as a different Seller.
</Warning>

<Info>
  ### You can use your internal ID of the seller as SellerName.
</Info>

The catalog can be updated from the [Criteo Product Catalog API](https://developers.criteo.com/marketing-solutions/v2022.07/docs/product-importer-api) or directly from [Criteo Management Center](https://help.criteo.com/kb/guide/en/update-product-catalog-N8juQWGJuu/Steps/775633).

## Removing Sellers

A Seller can be removed by removing its products from the Feed. If you want to stop an advertising a Seller immediately, you can suspend the budgets of its Seller-Campaigns (see "[Suspend a budget](/marketing-solutions/v2020.07/docs/managing-budgets#suspending-budgets)" section)

## Getting Sellers

In order to see the list of sellers that were extracted, you can make the following call:    

<EndpointBadge method="get">
```http
https://api.criteo.com/legacy/offsite-ads/sellers
```
</EndpointBadge>

<CodeGroup>
  ```json JSON
  [{
     "id" : "1",
     "sellerName": "AHepburn",
  },{
     "id" : "2",
     "sellerName": "HBogart"
  },{
     "id" : "3",
     "sellerName": "NewTech"
  }]
  ```
</CodeGroup>

A seller is defined by the following:

**`sellerName`** This corresponds to the sellerId that was specified in the product catalog you provided.

**`sellerId`** This SellerId identifies your seller. It is attributed by our Seller ingestion system.

 

| Filter Parameter   | Options                      | Meaning                                                                                                          |
| ------------------ | ---------------------------- | ---------------------------------------------------------------------------------------------------------------- |
| `sellerStatus`     | Active, Inactive             | Return only sellers with a specific status.                                                                      |
| `withProducts`     | True / False                 | Return sellers with or without products in the catalog. The default is not to filter on products in the catalog. |
| `withBudgetStatus` | Archived, Current, Scheduled | Return sellers with any budget having the given state. Default is to not filter on the budget state.             |
| `sellerName`       | string                       | Returns only sellers with the given "sellerName" value.                                                          |
| `advertiserId`     | integer                      | Return sellers for the given advertiser Id. Default is to not filter on advertiser                               |
| `campaignId`       | integer                      | Return sellers for the given campaign Id. Default is to not filter on campaign                                   |

<Warning>
  ### There is an enrichment delay of 24 to 48 hours from when a product is placed in the catalog and becomes available.
</Warning>

***

[Criteo Offsite Ads](/marketing-solutions/v2020.07/docs/criteo-offsite-ads)

[Managing Campaigns](/marketing-solutions/v2020.07/docs/managing-campaigns)
